made changes on youtube videos front page

--- a/index.html
+++ b/index.html
@@ -80,15 +80,12 @@
 		<div class="promo-bg-pattern-v1-dark promo-bg-fixed content-xlg parallaxBg">
 			<div class="container text-center" data-start="opacity: 1;" data-320="opacity: 0;">
 				<div class="margin-bottom-20">
-					<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" data-title="Video Presentation College of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=uwAe_4985EI&feature=youtu.be" >
+					<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" data-title="Video Presentation College of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=ulmrMibtiqw&feature=youtu.be" >
 						<i class="promo-video-icon icon-control-play"></i>
 					</a>
 					<div id="cbp-lightbox" class="dp-none"></div>
 				</div>
-
-				<span class="promo-text-v2 color-light margin-bottom-10 animated fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="1s">
-					Jacksonville State University
-				</span>
+				<span class="promo-text-v2 color-light margin-bottom-10 animated fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="1s"> Jacksonville State University </span>
 				<h2 class="promo-text-v1 color-light animated fadeInUp wow margin-bottom-20" data-wow-duration="1.5s" data-wow-delay="1.5s">Empowering exemplary nurses to care for anyone, anytime, anywhere.</h2>
 			</div>
 		</div>
@@ -161,7 +158,7 @@
 					<!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
-				<a class="cbp-lightbox" data-title="Testimonial Hannah Brooks Alumna" href="https://www.youtube.com/watch?v=pvA7XBcYctI&feature=youtu.be" data-cbp-lightbox="t">
+				<a class="cbp-lightbox" data-title="Testimonial Hannah Brooks Alumna" href="https://www.youtube.com/watch?v=_vOUCxt3I8A&feature=youtu.be" data-cbp-lightbox="t">
 <img src="assets/img/testimonials/hannah.jpg" alt="Hannah Brooks, Alumna Jacskonville State University" width="128" height="128" title="Hannah Brooks">
 				</a>
 							<strong>Hannah Brooks, RN</strong>
@@ -173,7 +170,7 @@
 					<!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
-               	<a class="cbp-lightbox" data-title="Testimonial Andrew Shelton Practicum Student" href="https://www.youtube.com/watch?v=YoYNF5hxKzg&feature=youtu.be" data-cbp-lightbox="t">
+               	<a class="cbp-lightbox" data-title="Testimonial Andrew Shelton Practicum Student" href="https://www.youtube.com/watch?v=CJeupYQ5Z1k&feature=youtu.be" data-cbp-lightbox="t">
 	<img src="assets/img/testimonials/andrew.jpg" alt="Andrew Shelton" width="128" height="128" title="Andrew Shelton"></a>
 							<strong>Andrew Shelton</strong>
 							<em>Practicum Student</em>
@@ -183,7 +180,7 @@
 					<!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
-                <a class="cbp-lightbox" data-title="Testimonial Mary McAllister Practicum Student" href="https://www.youtube.com/watch?v=nuM2F4rdq7I&feature=youtu.be" data-cbp-lightbox="t">
+                <a class="cbp-lightbox" data-title="Testimonial Mary McAllister Practicum Student" href="https://www.youtube.com/watch?v=TzNyWu4PNfg&feature=youtu.be" data-cbp-lightbox="t">
      <img src="assets/img/testimonials/mary.jpg" alt="Mary McAllister" width="128" height="128" title="Mary McAllister"></a>
 							<strong>Mary McAllister</strong>
 							<em>Practicum Student</em>
@@ -195,7 +192,7 @@
                        <!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item col-sm-offset-2">
 						<div class="testimonials-info">
-                               <a class="cbp-lightbox" data-title="Testimonial Wendy Key Preceptor" href="https://www.youtube.com/watch?v=T5G2hvPejhQ&feature=youtu.be" data-cbp-lightbox="t">
+                               <a class="cbp-lightbox" data-title="Testimonial Wendy Key Preceptor" href="https://www.youtube.com/watch?v=iPbU18qyfYY&feature=youtu.be" data-cbp-lightbox="t">
 	<img src="assets/img/testimonials/wendy.jpg" alt="Wendy Key" width="128" height="128" title="Wendy Key"></a>
 							<strong>Wendy Key</strong>
 							<em>Preceptor</em>
@@ -205,7 +202,7 @@
                     		<!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
-                               <a class="cbp-lightbox" data-title="Testimonial Kelsey Nelson Preceptor" href="https://www.youtube.com/watch?v=0ABUIcRTUg8&feature=youtu.be" data-cbp-lightbox="t">
+                               <a class="cbp-lightbox" data-title="Testimonial Kelsey Nelson Preceptor" href="https://www.youtube.com/watch?v=VoEXvpEiRoU&feature=youtu.be" data-cbp-lightbox="t">
 	<img src="assets/img/testimonials/kelsey.jpg" alt="Kelsey Nelson" width="128" height="128" title="Kelsey Nelson"></a>
 							<strong>Kelsey Nelson</strong>
 							<em>Preceptor</em>
