update description on docs

--- a/docs.html
+++ b/docs.html
@@ -85,7 +85,7 @@
 							<i class="icon-layers"></i>
 							<div class="service-block-desc">
 							  <h3>Practicum clinical Document</h3>
-							  <p>Needs new description</p>
+							  <p>The student and preceptor should review and sign the Practicum Clinical Document. The Practicum Clinical Document confirms the preceptor’s agreement to serve as a preceptor for the senior nursing student during the current semester. The document provides professional and contact information for the preceptor. If indicated, the document validates that the ADN preceptor has adequate nursing experience and critical thinking skills to provide a meaningful clinical experience.</p>
 							  <a href="http://www.jsu.edu/nursing/practicum/pdf/Practicum-Clinical-Document.pdf" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
 						  </div>
 						</div>
