college to school
update docs and logo, waiting on text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="promo-bg-pattern-v1-dark promo-bg-fixed content-xlg parallaxBg">
 			<div class="container text-center" data-start="opacity: 1;" data-320="opacity: 0;">
 				<div class="margin-bottom-20">
-					<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" data-title="Video Presentation College of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=ulmrMibtiqw&feature=youtu.be" >
+					<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" data-title="Video Presentation Department of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=ulmrMibtiqw&feature=youtu.be" >
 						<i class="promo-video-icon icon-control-play"></i>
 					</a>
 					<div id="cbp-lightbox" class="dp-none"></div>
@@ -136,7 +136,7 @@
 				<a href="contact.html" class="col-sm-4 index-bg-img-v6">
 				<div class="service-block rgba-purple no-margin-bottom content-sm equal-height-column"><i class="icon-custom icon-md rounded icon-color-light icon-line icon-education-164"></i>
 				  <h2 class="heading-md font-light">Contact</h2>
-						<p class="no-margin-bottom font-light">Jacksonville State University College of Nursing Faculty</p>
+						<p class="no-margin-bottom font-light">Jacksonville State University Department of Nursing Faculty</p>
 					</div>
 				</a>
                 <div class="col-sm-4 index-bg-img-v5">
