change information on text

--- a/preceptor.html
+++ b/preceptor.html
@@ -186,7 +186,7 @@
 				<div class="container">
                 	<div class="row">
                 		<div class="promo-text-v2 heading-footer">
-                			<p>JSU College of Nursing Practicum</p>
+                			<p>JSU School of Health Professions & Wellness</p>
                          </div>
                	
           <!-- Useful Links -->
