--- a/student.html
+++ b/student.html
@@ -164,7 +164,7 @@
 				<div class="container">
                 	<div class="row">
                 		<div class="promo-text-v2 heading-footer">
-                			<p>JSU College of Nursing Practicum</p>
+                			<p>JSU School of Health Professions & Wellness</p>
                          </div>
                	
           <!-- Useful Links -->
