change titles and names

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en-US"> <!--<![endif]-->
 <head>
-	<title>JSU | College of Nursing Practicum</title>
+	<title>JSU | Department of Nursing Practicum</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="College of Nursing Practicum">
+	<meta name="description" content="Department of Nursing Practicum">
 	<meta name="author" content="JSU Interactive">
 
 	<!-- Favicon -->
