--- a/preceptor.html
+++ b/preceptor.html
@@ -3,12 +3,12 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en-US"> <!--<![endif]-->
 <head>
-	<title>JSU | College of Nursing Practicum</title>
+	<title>JSU | Department of Nursing Practicum</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="College of Nursing Practicum">
+	<meta name="description" content="Department of Nursing Practicum">
 	<meta name="author" content="JSU Interactive">
 
 	<!-- Favicon -->
@@ -88,7 +88,7 @@
 				<ul>
 					<li>The preceptor should have educational preparation of Bachelor of Science in Nursing (BSN) or higher with expertise in the clinical area relevant to the student’s learning needs.  The preceptor should have a minimum of one year nursing experience. </li>
 
-<li>The preceptor may be approved with credentials other than a BSN (i.e. ADN). An additional Letter of Endorsement (LOE) should be completed by the nurse manager and submitted to the College of Nursing (CON) by the student.  The student is responsible for having the nurse manager complete the document.</li>
+<li>The preceptor may be approved with credentials other than a BSN (i.e. ADN). An additional Letter of Endorsement (LOE) should be completed by the nurse manager and submitted to the Department of Nursing by the student.  The student is responsible for having the nurse manager complete the document.</li>
 
 <li>The preceptor may only supervise one student during a clinical shift as specified by the Alabama Board of Nursing.  The preceptor may serve as preceptor for more than one student as long as the students do not precept on the same clinical shift.</li>
 
