--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en-US"> <!--<![endif]-->
 <head>
-	<title>JSU | College of Nursing Practicum | Contact</title>
+	<title>JSU | Department of Nursing Practicum | Contact</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
