fix the problem

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 		  <h5>Department Head</h5>
 		  <p> <strong>C</strong> (256)458-5862<br>
 		    <strong>P</strong> (256)782-8129<br>
-		    <strong>E</strong> gulledge<a href="mailto:wedge@jsu.edu">@jsu.edu</a></p>
+		    <strong>E</strong> <a href="mailto:gulledge@jsu.edu"> gulledge@jsu.edu</a></p>
 		</li> 
 		  <li class="col-sm-3 col-xs-6"> <div class="team-img"> <img class="img-responsive" alt="" src="assets/img/team/donna.jpg"> </div> <h5><strong>Donna Etheredge, MSN, RNC</strong></h5> <h5>Course Faculty</h5> <p> <strong>C</strong> (256)996-0879<br> <strong>P</strong> (256)782-5671<br><strong>E</strong> <a href="mailto:detheredge@jsu.edu">detheredge@jsu.edu</a></p> </li> <li class="col-sm-3 col-xs-6"> <div class="team-img"> <img class="img-responsive" alt="" src="assets/img/team/tammy.jpg"> </div> <h5><strong>Tammy Morrow, MSN, RN</strong></h5> <h5>Course Faculty</h5> <p> <strong>C</strong> (256)591-9184<br> <strong>P</strong> (256)782-5435 <br><strong>E</strong> <a href="mailto:tmorrow@jsu.edu">tmorrow@jsu.edu</a></p> </li> </ul> </div> <!--=== End Team v1 ===--> <!--=== End Team v1 ===--></div><!--=== Footer v6 ===--> <div class="footer-v6" id="footer-v6"> <div class="footer text-center"> <div class="container"> <div class="row"> <div class="promo-text-v2 heading-footer"> 
 		  
