--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 						<!-- Navbar Brand -->
 						<div class="navbar-brand">
 							<a href="index.html">
-								<img class="default-logo" src="assets/img/logo3-light.png" alt="Logo">
-								<img class="shrink-logo" src="assets/img/logo3-dark.png" alt="Logo">
+								<img class="shrink-logo" src="assets/img/logo3-dark.png" alt="JSU School of Health Professions & Wellness Logo">
 							</a>
 						</div>
 						<!-- ENd Navbar Brand -->
@@ -80,10 +79,10 @@
 		<div class="promo-bg-pattern-v1-dark promo-bg-fixed content-xlg parallaxBg">
 			<div class="container text-center" data-start="opacity: 1;" data-320="opacity: 0;">
 				<div class="margin-bottom-20">
-					<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" data-title="Video Presentation Department of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=ulmrMibtiqw&feature=youtu.be" >
-						<i class="promo-video-icon icon-control-play"></i>
-					</a>
-					<div id="cbp-lightbox" class="dp-none"></div>
+				<a class="promo-video-icon-wrap color-light rounded-x animated fadeInUp wow cbp-lightbox" data-wow-duration="2s" data-wow-delay=".5s" alt="Introduction video to the Nursing Practicum at JSU" title="Video presentation for the JSU Nursing Practicum" data-title="Video Presentation Department of Nursing Practicum" data-cbp-lightbox="i" href="https://www.youtube.com/watch?v=ulmrMibtiqw&feature=youtu.be" >
+				<i class="promo-video-icon icon-control-play"></i>
+				</a>
+				<div id="cbp-lightbox" class="dp-none"></div>
 				</div>
 				<span class="promo-text-v2 color-light margin-bottom-10 animated fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="1s"> Jacksonville State University </span>
 				<h2 class="promo-text-v1 color-light animated fadeInUp wow margin-bottom-20" data-wow-duration="1.5s" data-wow-delay="1.5s">Empowering exemplary nurses to care for anyone, anytime, anywhere.</h2>
@@ -94,7 +93,7 @@
 		<div class="container content-md">
 			<div class="text-center margin-bottom-50">
 				<h2 class="title-v2 title-center">About Nursing Practicum</h2>
-				<p class="space-lg-hor"><h4>Practicum is designed to support success on the National Council Licensure Examination (NCLEX) and enhance the transition from the student role to a practicing registered nurse.  Jacksonville State University is excited to collaborate with external agencies in the preparation of future generations of registered nurses.</h4></p>
+				<p class="space-lg-hor"><h3>Practicum is designed to support success on the National Council Licensure Examination (NCLEX) and enhance the transition from the student role to a practicing registered nurse.  Jacksonville State University is excited to collaborate with external agencies in the preparation of future generations of registered nurses.</h3></p>
    		</div>
 		</div>
 		<!-- End About Section -->
@@ -156,54 +155,53 @@
 
 				<div class="row" >
 					<!-- Testimonials Item BEGIN -->
-					<div class="col-sm-4 testimonials-item">
-						<div class="testimonials-info">
+				<div class="col-sm-4 testimonials-item">
+				<div class="testimonials-info">
 				<a class="cbp-lightbox" data-title="Testimonial Hannah Brooks Alumna" href="https://www.youtube.com/watch?v=_vOUCxt3I8A&feature=youtu.be" data-cbp-lightbox="t">
-<img src="assets/img/testimonials/hannah.jpg" alt="Hannah Brooks, Alumna Jacskonville State University" width="128" height="128" title="Hannah Brooks">
+				<img src="assets/img/testimonials/hannah.jpg" alt="Hannah Brooks, JSU Nursing Alumna Jacskonville State University testimonial" width="128" height="128" title="Hannah Brooks, Testimonial">
 				</a>
-							<strong>Hannah Brooks, RN</strong>
-							<em>Alumna</em>
-                            
-						</div>
-					</div>
+				<strong>Hannah Brooks, RN</strong>
+				<em>Alumna</em>            
+				</div>
+				</div>
 					<!-- Testimonials Item END -->
 					<!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
                	<a class="cbp-lightbox" data-title="Testimonial Andrew Shelton Practicum Student" href="https://www.youtube.com/watch?v=CJeupYQ5Z1k&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/andrew.jpg" alt="Andrew Shelton" width="128" height="128" title="Andrew Shelton"></a>
-							<strong>Andrew Shelton</strong>
-							<em>Practicum Student</em>
+	<img src="assets/img/testimonials/andrew.jpg" alt="Andrew Shelton, JSU Nursing student at Jacksonville State University" width="128" height="128" title="Andrew Shelton, Testimonial"></a>
+				<strong>Andrew Shelton</strong>
+				<em>Practicum Student</em>
        				</div>
 					</div>
 					<!-- Testimonials Item END -->
 					<!-- Testimonials Item BEGIN -->
-					<div class="col-sm-4 testimonials-item">
-						<div class="testimonials-info">
-                <a class="cbp-lightbox" data-title="Testimonial Mary McAllister Practicum Student" href="https://www.youtube.com/watch?v=TzNyWu4PNfg&feature=youtu.be" data-cbp-lightbox="t">
-     <img src="assets/img/testimonials/mary.jpg" alt="Mary McAllister" width="128" height="128" title="Mary McAllister"></a>
-							<strong>Mary McAllister</strong>
-							<em>Practicum Student</em>
-						</div>
-					</div>
-					<!-- Testimonials Item END -->		
+			<div class="col-sm-4 testimonials-item">
+			<div class="testimonials-info">
+                <a class="cbp-lightbox" data-title="Mary McAllister, Testimonial" href="https://www.youtube.com/watch?v=TzNyWu4PNfg&feature=youtu.be" data-cbp-lightbox="t">
+     <img src="assets/img/testimonials/mary.jpg" alt="Mary McAllister, JSU Nursing student at Jacksonville State University" width="128" height="128" title="Mary McAllister, Testimonial"></a>
+			<strong>Mary McAllister</strong>
+			<em>Practicum Student</em>
+			</div>
+			</div>
+					<!-- Testimonials Item END -->	
 				</div>
                 <div class="row">
                        <!-- Testimonials Item BEGIN -->
 					<div class="col-sm-4 testimonials-item col-sm-offset-2">
-						<div class="testimonials-info">
-                               <a class="cbp-lightbox" data-title="Testimonial Wendy Key Preceptor" href="https://www.youtube.com/watch?v=iPbU18qyfYY&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/wendy.jpg" alt="Wendy Key" width="128" height="128" title="Wendy Key"></a>
-							<strong>Wendy Key</strong>
-							<em>Preceptor</em>
-						</div>
+					<div class="testimonials-info">
+				   <a class="cbp-lightbox" data-title="Testimonial Wendy Key Preceptor" href="https://www.youtube.com/watch?v=iPbU18qyfYY&feature=youtu.be" data-cbp-lightbox="t">
+	<img src="assets/img/testimonials/wendy.jpg" alt="Wendy Key, Preceptor and alumna from Jacsksonville State University" width="128" height="128" title="Wendy Key, current preceptor testimonial"></a>
+					<strong>Wendy Key</strong>
+					<em>Preceptor</em>
+					</div>
 					</div>
 					<!-- Testimonials Item END -->
                     		<!-- Testimonials Item BEGIN -->
-					<div class="col-sm-4 testimonials-item">
-						<div class="testimonials-info">
-                               <a class="cbp-lightbox" data-title="Testimonial Kelsey Nelson Preceptor" href="https://www.youtube.com/watch?v=VoEXvpEiRoU&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/kelsey.jpg" alt="Kelsey Nelson" width="128" height="128" title="Kelsey Nelson"></a>
+		<div class="col-sm-4 testimonials-item">
+		<div class="testimonials-info">
+	   <a class="cbp-lightbox" data-title="Testimonial Kelsey Nelson Preceptor" href="https://www.youtube.com/watch?v=VoEXvpEiRoU&feature=youtu.be" data-cbp-lightbox="t">
+	<img src="assets/img/testimonials/kelsey.jpg" alt="Kelsey Nelson, Preceptor and alumna from Jacsksonville State University" width="128" height="128" title="Kelsey Nelso, current preceptor testimonial"></a>
 							<strong>Kelsey Nelson</strong>
 							<em>Preceptor</em>
 					  </div>
