made new correction to text and some of the titles and alts

--- a/student.html
+++ b/student.html
@@ -60,7 +60,7 @@
 						<!-- Navbar Brand -->
 						<div class="navbar-brand">
 							<a href="index.html">
-								<img class="shrink-logo" src="assets/img/logo3-dark.png" alt="Logo">
+								<img class="shrink-logo" src="assets/img/logo3-dark.png" alt="JSU School of Health Professions & Wellness Logo">
 							</a>
 						</div>
 						<!-- ENd Navbar Brand -->
@@ -107,15 +107,13 @@
           	<div class="col-md-6 md-margin-bottom-30">
 			  <h4>Don'ts</h4>
 			<ul>
-				<li>The student should not precept with relatives or friends or at a unit of employment.</li>
-				<li>The student should NOT give any medication or perform invasive procedures without direct supervision of preceptor (i.e. Foley insertion, IV insertion, medication administration, sterile dressing changes, etc).</li>
-  				<li>The student should NOT be permitted to administer blood or blood products.</li>	
+			<li>The student should not precept with relatives or friends or at a unit of employment.</li>
+			<li>The student should NOT give any medication or perform invasive procedures without direct supervision of preceptor (i.e. Foley insertion, IV insertion, medication administration, sterile dressing changes, etc).</li>
+			<li>The student should NOT be permitted to administer blood or blood products.</li>	
 			</ul>
 			<br />
-            <div class="responsive-video">
-						
-                            
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/CZX7OE9xH14" frameborder="0" allowfullscreen></iframe>
+            <div class="responsive-video">    
+			 <iframe width="560" height="315" title="How to prepare for your Nursing Preceptorship Video" alt="How to prepare for your Nursing Preceptorship Video" src="https://www.youtube.com/embed/CZX7OE9xH14" frameborder="0" allowfullscreen></iframe>
 						</div>
 		</div><!-- second row right side-->
 		<!--=== End Content Part ===-->
@@ -138,7 +136,7 @@
 							  <h3>skills assessment sheet</h3>
 							  <p>The student and preceptor should review the Skills Assessment Sheet. The Skills Assessment Sheet provides the preceptor a customized list outlining areas of competency and areas in which additional experience is needed.  </p>
                               <a href="http://www.jsu.edu/nursing/practicum/pdf/Skills-Assessment-Sheet.pdf
-" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
+" target="new" title="A link to a .pdf file is present" alt="Skills Assessment Sheet" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
 
 						  </div>
 						</div>
