update on titles and alts, restructure H tags

--- a/evaluation.html
+++ b/evaluation.html
@@ -83,7 +83,7 @@
 
 <!--=== Content Part ===-->
             	<div class="col-md-6 md-margin-bottom-30">
-			  <h4>Daily Feedback</h4>
+			  <h3>Daily Feedback</h3>
 				<p>Evaluation of the student’s progress should be done on a daily basis.  The preceptor should provide constructive, honest, and timely feedback.  The Clinical Time Log provides space for documentation of daily feedback and validation of clinical hours completed.</p>
                 <ul>
                   <li>Feedback should be provided in a private setting (refrain from correcting the student in front of staff, peers or patients).</li>
@@ -106,7 +106,7 @@
 		</div><!-- first row left side-->
         
           	<div class="col-md-6 md-margin-bottom-30">
-			  <h4>Mid-Term / Final Evaluations</h4>
+			  <h3>Mid-Term / Final Evaluations</h3>
 			<p>A formal evaluation of the student’s performance should be done at mid-term and at the completion of the practicum.</p>
             <ul>
 				<li>The mid-term evaluation should be done after completion of approximately 90 clinical hours.</li>
@@ -116,7 +116,7 @@
 		</div><!-- second row right side-->
         <!-- Third row -->
         <div class="col-md-6 md-margin-bottom-30">
-			  <h4>Faculty Contact</h4>
+			  <h3>Faculty Contact</h3>
 			  <p>The preceptor should contact either of the course faculty at any time if concerns are identified regarding student performance and these concerns cannot be addressed through daily feedback.  Faculty contact information is located on the Faculty and Student Contact Information Sheet and <a href="contact.html">Contact page</a></p>
         </div>
         <!-- end third row -->
@@ -132,9 +132,9 @@
 						<div class="service-block-v8">
 							<i class="icon-layers"></i>
 						  <div class="service-block-desc">
-						    <h3>CLINICAL TIME LOG</h3>
-							  <p>The Clinical Time Log provides space for documentation of daily feedback and validation of clinical hours completed.</p>
-						    <a href="http://www.jsu.edu/nursing/practicum/pdf/Clinical-Time-Log.pdf" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
+			<h3>CLINICAL TIME LOG</h3>
+		  	<p>The Clinical Time Log provides space for documentation of daily feedback and validation of clinical hours completed.</p>
+			<a href="http://www.jsu.edu/nursing/practicum/pdf/Clinical-Time-Log.pdf" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark" title="A link to a .pdf file is present" alt="Clinical Time Log">Download</a>
 						  </div>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 						  <div class="service-block-desc">
 						    <h3>Preceptor's evaluation of course</h3>
 							  <p>The preceptor is asked to complete a course evaluation at the end of the practicum.  This feedback will be used by faculty to implement ongoing improvements in the course. The evaluation is available online at <a href="http://www.jsu.edu/nursing/survey/" target="new">www.jsu.edu/nursing/survey/</a> or a written copy can be completed and returned by the student.</p>	<a href="http://www.jsu.edu/nursing/practicum/pdf/Preceptor's-Evaluation-of-Course.pdf
-" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
+" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark" title="A link to a .pdf file is present" alt="Preceptor's Evaluation of Course">Download</a>
  </div>
 						</div>
 					</div>
@@ -157,7 +157,7 @@
 						  <div class="service-block-desc">
 						    <h3>PRECEPTOR'S EVALUATION OF STUDENT</h3>
 						    <p>A formal evaluation of the student’s performance should be done at mid-term and at the completion of the practicum.</p>
-						    <a href="http://www.jsu.edu/nursing/practicum/pdf/Preceptor's-Evaluation-of-Student.pdf" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark">Download</a>
+						    <a href="http://www.jsu.edu/nursing/practicum/pdf/Preceptor's-Evaluation-of-Student.pdf" target="new" class="btn-u btn-brd btn-brd-hover btn-u-dark" title="A link to a .pdf file is present" alt="Preceptor's Evaluation of Student">Download</a>
 						  </div>
 						</div>
 					</div>
