add better details to the testimonials

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="col-sm-4 testimonials-item">
 						<div class="testimonials-info">
                	<a class="cbp-lightbox" data-title="Testimonial Andrew Shelton Practicum Student" href="https://www.youtube.com/watch?v=CJeupYQ5Z1k&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/andrew.jpg" alt="Andrew Shelton, JSU Nursing student at Jacksonville State University" width="128" height="128" title="Andrew Shelton, Testimonial"></a>
+	<img src="assets/img/testimonials/andrew.jpg" alt="Andrew Shelton, JSU Nursing student at Jacksonville State University testimonial" width="128" height="128" title="Andrew Shelton, Testimonial"></a>
 				<strong>Andrew Shelton</strong>
 				<em>Practicum Student</em>
        				</div>
@@ -179,7 +179,7 @@
 			<div class="col-sm-4 testimonials-item">
 			<div class="testimonials-info">
                 <a class="cbp-lightbox" data-title="Mary McAllister, Testimonial" href="https://www.youtube.com/watch?v=TzNyWu4PNfg&feature=youtu.be" data-cbp-lightbox="t">
-     <img src="assets/img/testimonials/mary.jpg" alt="Mary McAllister, JSU Nursing student at Jacksonville State University" width="128" height="128" title="Mary McAllister, Testimonial"></a>
+     <img src="assets/img/testimonials/mary.jpg" alt="Mary McAllister, JSU Nursing student at Jacksonville State University testimonial" width="128" height="128" title="Mary McAllister, Testimonial"></a>
 			<strong>Mary McAllister</strong>
 			<em>Practicum Student</em>
 			</div>
@@ -191,7 +191,7 @@
 					<div class="col-sm-4 testimonials-item col-sm-offset-2">
 					<div class="testimonials-info">
 				   <a class="cbp-lightbox" data-title="Testimonial Wendy Key Preceptor" href="https://www.youtube.com/watch?v=iPbU18qyfYY&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/wendy.jpg" alt="Wendy Key, Preceptor and alumna from Jacsksonville State University" width="128" height="128" title="Wendy Key, current preceptor testimonial"></a>
+	<img src="assets/img/testimonials/wendy.jpg" alt="Wendy Key, Preceptor and alumna from Jacsksonville State University testimonial" width="128" height="128" title="Wendy Key, current preceptor testimonial"></a>
 					<strong>Wendy Key</strong>
 					<em>Preceptor</em>
 					</div>
@@ -201,7 +201,7 @@
 		<div class="col-sm-4 testimonials-item">
 		<div class="testimonials-info">
 	   <a class="cbp-lightbox" data-title="Testimonial Kelsey Nelson Preceptor" href="https://www.youtube.com/watch?v=VoEXvpEiRoU&feature=youtu.be" data-cbp-lightbox="t">
-	<img src="assets/img/testimonials/kelsey.jpg" alt="Kelsey Nelson, Preceptor and alumna from Jacsksonville State University" width="128" height="128" title="Kelsey Nelso, current preceptor testimonial"></a>
+	<img src="assets/img/testimonials/kelsey.jpg" alt="Kelsey Nelson, Preceptor and alumna from Jacsksonville State University testimonial" width="128" height="128" title="Kelsey Nelso, current preceptor testimonial"></a>
 							<strong>Kelsey Nelson</strong>
 							<em>Preceptor</em>
 					  </div>
